--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/npm": "^7.0.10",
     "@semantic-release/release-notes-generator": "^9.0.1",
+    "@types/esprima": "^4.0.2",
+    "@types/fs-extra": "^9.0.7",
+    "@types/gulp-util": "^3.0.35",
     "@types/jest": "^26.0.20",
+    "@types/md5-file": "^4.0.2",
     "@types/node": "^14.14.31",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
